objects/Check_In__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_Distance__c</fullName>
        <label>Calculated Distance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Address__c</fullName>
        <label>Destination Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Address__c</fullName>
        <label>Source Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Check In</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Check In Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>